docker/k8s/tempus-aws-helmchart/qa-tempus-ingress/ingress-tempus-tls.yaml
#
# Copyright © 2016-2018 The Thingsboard Authors
# Modifications © 2017-2018 Hashmap, Inc
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: tempus-ingress
  namespace: default
spec:
  rules:
  - host: tempus.hashmapinc.com
    http:
      paths:
      - backend:
          serviceName: tempus-svc
          servicePort: 8080
        path: /
      - backend:
          serviceName: nifi-svc
          servicePort: 9090
        path: /nifi
  tls:
  - hosts:
    - tempus.hashmapinc.com
    secretName: tempus-cert
status:
  loadBalancer:
    ingress:
    - hostname: a744d241bbb8711e8b9be0e749a74ca0-564488e1fd42306d.elb.us-east-1.amazonaws.com
