docker/k8s/tempus-aws-helmchart/qa-tempus-ingress/ingress-tempus.yaml
#
# Copyright © 2016-2018 The Thingsboard Authors
# Modifications © 2017-2018 Hashmap, Inc
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: tempus-ingress
  namespace: default
spec:
  rules:
  - host: tempus-qa.hashmapinc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tempus-svc
          servicePort: 8080
      - path: /nifi
        backend:
          serviceName: nifi-svc
          servicePort: 9090
  tls:
  - hosts:
    - tempus-qa.hashmapinc.com
